2008-11-27  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c: set priv->account to NULL in
	dispose after unref'ing it.

2008-11-24  Jose Dapena Paz  <jdapena@igalia.com>

	* Added new TnyGtkFolderListStore, implementing a plain model (no tree)
	for the folder store.

	* libtinymailui-gtk/tny-gtk-folder-store-tree-model.[ch]:
	Added support for settings construction flags. Also added a flag
	"show path" for the tree model, that makes it store the full path 
	name.

2008-11-21  Sergio Villar Senin  <svillar@iglaia.com>

	* libtinymail-camel/tny-camel-default-connection-policy.c: added
	missing license
	* libtinymail-gnomevfs/tny-vfs-stream.c: prevent a double free of a
	file pointer
	* libtinymail-maemo/tny-maemo-device.c: added missing initialization
	* libtinymailui-gtkhtml/tny-gtk-html-mime-part-view.c: added missing
	initialization

2008-11-21  Martin Bonnin  <martinbonnin@gmail.com>
 
	Add some documentation tny_folder_store_refresh_async()

2008-11-21  Martin Bonnin  <martinbonnin@gmail.com>
 
	Add some documentation about the behaviour of tny_folder_refresh_async()

2008-11-21  Martin Bonnin  <martinbonnin@gmail.com>
 
	* revert last changeset:
	We want this to be fixed a better way	 

2008-11-20  Martin Bonnin  <martinbonnin@gmail.com>

	* camel operation:
	adding camel_operation_mute/unmute() and use it to filter the progress
	events. This prevents to send bad progress when refreshing an IMAP folder

2008-11-20  Martin Bonnin  <martinbonnin@gmail.com>
 
 	* libtinymail-camel/camel-lite/camel/providers/imap:
 	For IMAP, we open 2 sessions: one for standard operations, the other
 	for fetching messages. This makes concurrent accesses to the folder summary
 	therefore corrupting it.
 	This happens e.g when you delete a message and fetch a new one afterwards.
 	This patch adds the "dont_touch_summary" parameter to prevent the GetMsg session to
 	mess up too much.

2008-11-20  Jose Dapena Paz  <jdapena@igalia.com>
