@@ -2,6 +2,10 @@
 
 	* libtinymail-camel/tny-camel-folder.c: set priv->account to NULL in
 	dispose after unref'ing it.
+2008-11-27  Jose Dapena Paz  <jdapena@igalia.com>
+
+	* libtinymailui-gtk/tny-gtk-folder-list-store.c:
+	Fixed reference leaks
 
 2008-11-24  Jose Dapena Paz  <jdapena@igalia.com>
 
